<resources>
    <!--    facebook login-->
    <string name="facebook_app_id">203643759107747</string>
    <string name="fb_login_protocol_scheme">fb203643759107747</string>
    <string name="facebook_client_token">5cf0a97a5f63fdd1da96ee5cb081cfd5</string>


    <string name="app_name">ManagementUiKit</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="schedule_your_tasks">Schedule Your Tasks</string>
    <string name="it_is_a_lon">It is a long established fact that a reader will be distracted by the readable content of a page when looking.</string>
    <string name="manage_your_task">Manage Your Task</string>
    <string name="it_is_a_long">It is a long established fact that a reader will be distracted by the readable content of a page when looking.</string>
    <string name="todo">TODO</string>
    <string name="hi">Hi,</string>
    <string name="devsnet">Devsnet</string>
    <string name="today">Today</string>
    <string name="june_20_2022">June 20, 2022</string>
    <string name="ongoing">OnGoing</string>
    <string name="_10_tasks">0 Tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="mobile_application_design">Mobile Application Design</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="dashboard_ui_design">Dashboard UI Design</string>
    <string name="home">Home</string>
    <string name="send">Send</string>
    <string name="sticky_note">Sticky Note</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="august_19">August 19</string>
    <string name="_10_tasks_today">10 tasks today</string>
    <string name="urgent">Urgent</string>
    <string name="landing_page_project">Landing Page Project</string>
    <string name="design_meeting">Design Meeting</string>
    <string name="task_title">Task Title</string>
    <string name="category">Category</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="participants">Participants</string>
    <string name="create_task">Create Task</string>
    <string name="status">Status</string>
    <string name="cancel">Cancel</string>
    <string name="none">---None---</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="update_task">Update Task</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_participants">Enter Participants</string>
    <string name="create">Create</string>
    <string name="hello">Hello!</string>
    <string name="enter_your_details_below">Enter your details below</string>
    <string name="user_name">User Name</string>
    <string name="your_user_name">Your User Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_password">Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="don_t_have_any_account">Don’t Have Any Account?</string>
    <string name="chat">Chat</string>
    <string name="calender">Calender</string>
    <string name="calls">Calls</string>
    <string name="employee_details">Employee Details</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="ongoing_tasks">Ongoing tasks</string>
    <string name="tasks">Tasks</string>
    <string name="online">Online</string>
    <string name="write_a_message">Write a message...</string>
    <string name="_0h_ago">0h ago</string>
    <string name="all_user">All user</string>
    <string name="not_found">not found</string>
</resources>