<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".Activity.SignInActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:clipToPadding="false"
            android:orientation="vertical">
            <TextView
                android:textAlignment="center"
                android:includeFontPadding="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:layout_gravity="center"
                android:text="@string/hello"
                android:textAllCaps="false"
                android:textColor="@color/text_color_dark"
                android:textSize="32sp" />
            <TextView
                android:textAlignment="center"
                android:includeFontPadding="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/enter_your_details_below"
                android:textColor="@color/text_color_dark_70"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/user_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/text_color_dark_70"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/btn_custom_dialog_text_input"
                    android:includeFontPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/your_user_name"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNone"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/text_color_dark_70"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:drawableStart="@drawable/user_name_icon"
                    android:drawablePadding="15dp"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:textAlignment="center"
                android:includeFontPadding="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textColor="@color/text_color_dark_70"
                android:textSize="16sp" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:hintEnabled="false"
                    app:passwordToggleTint="@color/C1C1C1"
                    app:errorTextColor="#FF0000">
                    <com.google.android.material.textfield.TextInputEditText
                        android:includeFontPadding="false"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:hint="@string/your_password"
                        android:singleLine="true"
                        android:textSize="14sp"
                        android:imeOptions="actionNone"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/text_color_dark_70"
                        android:layout_gravity="center"
                        android:inputType="textPassword"
                        android:background="@null"
                        android:drawableStart="@drawable/lock_icon"
                        android:drawablePadding="15dp"
                        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/A1A1A1"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded,TextContrastCheck" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins_medium"
                android:background="@drawable/card_3"
                android:backgroundTint="@color/background_color"
                android:layout_marginTop="40dp"
                android:textAllCaps="false"
                tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/or_continue_with"
                android:textAllCaps="false"
                android:textColor="@color/text_color_dark_70"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded,TextContrastCheck" />
            <Button
                android:id="@+id/sign_in_with_google_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins_medium"
                android:background="@drawable/card_3"
                android:elevation="20dp"
                android:backgroundTint="@color/white"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/google"
                android:paddingStart="70dp"
                android:drawablePadding="10dp"
                android:paddingEnd="70dp"
                android:gravity="center"
                android:textAllCaps="false"
                tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />
            <Button
                android:id="@+id/sign_in_with_facebook_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_facebook"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins_medium"
                android:background="@drawable/card_3"
                android:elevation="20dp"
                android:backgroundTint="@color/white"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/facebook"
                android:paddingStart="60dp"
                android:drawablePadding="10dp"
                android:paddingEnd="60dp"
                android:gravity="center"
                android:textAllCaps="false"
                tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="45dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:text="@string/don_t_have_any_account"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color_dark_70"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,TextContrastCheck" />
                <TextView
                    android:id="@+id/text_view_sign_up"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/background_color"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/background_color_20">
        <ProgressBar
            android:theme="@style/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</FrameLayout>