<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    tools:context=".Activity.CreateTaskActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">
        <LinearLayout
            android:id="@+id/frag_container_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_dark_80"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/task_title"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_title"
                android:includeFontPadding="false"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/enter_title"
                android:singleLine="true"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/text_color_dark_80"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:background="@null"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:includeFontPadding="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_dark_80"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/status"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/selection_ongoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_border"
                android:backgroundTint="@color/text_color_dark"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:padding="10dp"
                android:text="@string/ongoing"
                android:textAlignment="center"
                android:textColor="@color/text_color_dark"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck"/>
            <TextView
                android:id="@+id/selection_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_border"
                android:backgroundTint="@color/yellow_40"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:padding="10dp"
                android:text="@string/pending"
                android:textAlignment="center"
                android:textColor="@color/yellow_40"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck"/>
            <TextView
                android:id="@+id/selection_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_border"
                android:backgroundTint="@color/blue_40"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:padding="10dp"
                android:text="@string/completed"
                android:textAlignment="center"
                android:textColor="@color/blue_40"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck"/>
            <TextView
                android:id="@+id/selection_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_border"
                android:backgroundTint="@color/green_40"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/green_40"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:weightSum="2"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                tools:ignore="UselessParent">
                <TextView
                    android:includeFontPadding="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark_80"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/starts"/>
                <LinearLayout
                    android:id="@+id/layout_pick_date_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/card_3"
                    android:backgroundTint="@color/yellow"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_date_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_dark"
                        android:textSize="12sp"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Select time"
                        tools:ignore="HardcodedText" />
                    <ImageView
                        android:layout_marginStart="7dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/text_color_dark"
                        android:background="@drawable/dropdown"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                tools:ignore="UselessParent">
                <TextView
                    android:includeFontPadding="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark_80"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/ends"/>
                <LinearLayout
                    android:id="@+id/layout_pick_date_end"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/card_3"
                    android:backgroundTint="@color/background_color"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_date_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Select time"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:background="@drawable/dropdown"
                        android:backgroundTint="@color/white"
                        tools:ignore="ContentDescription,ImageContrastCheck" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_marginStart="20dp"
                        android:includeFontPadding="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_dark_80"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/participants"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_marginEnd="20dp"
                        android:id="@+id/btn_add_participants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/round_add_circle_outline_24"/>
                </LinearLayout>
                <com.google.android.material.chip.ChipGroup
                    android:paddingHorizontal="20dp"
                    android:clipToPadding="false"
                    android:id="@+id/chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">
                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btn_create_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_task"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/card_3"
            android:backgroundTint="@color/background_color"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:textAllCaps="false"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>